--- a/Granja/mi_app/templates/mi_app/index.html
+++ b/Granja/mi_app/templates/mi_app/index.html
@@ -3,30 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
-    <form action="save" method="post">
-        {% csrf_token %}
-        
-        <label for="cedula">cedula: </label>
-        <input id="cedula" type="number" name="cedula">
 
-        <label for="nombre">Your name: </label>
-        <input id="nombre" type="text" name="nombre">
+    <ul>
+        {% for cliente in clientes %}
+        <li>{{cliente.nombre}}</li>
+        <li>{{cliente.apellidos}}</li>
+        <li>{{cliente.cedula}}</li>
+        <button><a href="{% url 'consulta' cliente.cedula %}">Consultar</a></button>
+        {% empty %}
+        <li>No articles yet.</li>
+        {% endfor %}
+    </ul>
 
-        <label for="apellidos">Your apellidos: </label>
-        <input id="apellidos" type="text" name="apellidos">
+    <button><a href="/cliente/registrar">Registrar cliente</a></button>
 
-        <label for="direccion">Your direccion: </label>
-        <input id="direccion" type="text" name="direccion">
-
-        <label for="telefono">Your telefono: </label>
-        <input id="telefono" type="number" name="telefono">
-
-        <input type="submit" value="OK">
-    </form>
-
-    <h1>{{foo}}</h1>
 </body>
 </html>
