--- a/Granja/mi_app/templates/mi_app/index.html
+++ b/Granja/mi_app/templates/mi_app/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'mi_app/base.html' %}
+
+{% block title %} Inicio {% endblock %}
+
+{% block content %}
+
+<div>
     <form action="save" method="post">
         {% csrf_token %}
-        
+
         <label for="cedula">cedula: </label>
         <input id="cedula" type="number" name="cedula">
 
@@ -27,6 +26,6 @@
         <input type="submit" value="OK">
     </form>
 
-    <h1>{{foo}}</h1>
-</body>
-</html>
+
+
+    {% endblock %}
