--- a/Granja/mi_app/templates/mi_app/Clientes/cliente.html
+++ b/Granja/mi_app/templates/mi_app/Clientes/cliente.html
@@ -20,6 +20,7 @@
             <li>{{porcino.peso}}</li>
             <li>{{porcino.razas_idrazas.name}}</li>
             <button><a href="{% url 'deletePorcino' porcino.idporcinos %}">eliminar</a></button>
+            <button><a href="{% url 'profilePorcino' porcino.idporcinos %}">detalles</a></button>
         {% empty %}
             <li>No cerdos registrados</li>
         {% endfor %}
