--- a/Granja/mi_app/templates/mi_app/index.html
+++ b/Granja/mi_app/templates/mi_app/index.html
@@ -20,6 +20,7 @@
 
     <button><a href="/cliente/registrar">Registrar cliente</a></button>
     <button><a href="/porcino/all">Todos los porcinos</a></button>
+    <button><a href="/alimentos/all">Todos los alimentos</a></button>
 
 </body>
 </html>
