--- a/Granja/mi_app/static/css/base.css
+++ b/Granja/mi_app/static/css/base.css
@@ -37,9 +37,10 @@ body {
 }
 
 #sidebar {
+    min-height: 100%;
     width: 70px;
-    min-width: 70px;
-    z-index: 1000;
+    /* min-width: 70px;
+    z-index: 1000; */
     transition: all .25s ease-in-out;
     background-color: #0e2238;
     display: flex;
@@ -48,7 +49,7 @@ body {
 
 #sidebar.expand {
     width: 260px;
-    min-width: 260px;
+    /* min-width: 260px; */
 }
 
 .toggle-btn {
