--- a/Granja/mi_app/templates/mi_app/base.html
+++ b/Granja/mi_app/templates/mi_app/base.html
@@ -62,14 +62,10 @@
                 </a>
             </div>
         </aside>
-        <div class="main p-3">
-            <div class="text-center">
-                <h1>
-                    {% block content %}
+        <div class="main">
+            {% block content %}
 
-                    {% endblock %}
-                </h1>
-            </div>
+            {% endblock %}
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
