--- a/Granja/mi_app/templates/mi_app/index.html
+++ b/Granja/mi_app/templates/mi_app/index.html
@@ -13,6 +13,7 @@
         <li>{{cliente.apellidos}}</li>
         <li>{{cliente.cedula}}</li>
         <button><a href="{% url 'consulta' cliente.cedula %}">Consultar</a></button>
+        <button><a href="{% url 'eliminarCliente' cliente.cedula %}">Eliminar</a></button>
         {% empty %}
         <li>No articles yet.</li>
         {% endfor %}
