Fin implementación mostrar  informaciión del cliente

--- a/Granja/mi_app/templates/mi_app/index.html
+++ b/Granja/mi_app/templates/mi_app/index.html
@@ -158,6 +158,13 @@
                 <p><strong>Apellidos:</strong> <span id="modal-apellidos"></span></p>
                 <p><strong>Dirección:</strong> <span id="modal-direccion"></span></p>
                 <p><strong>Teléfono:</strong> <span id="modal-telefono"></span></p>
+                <hr>
+
+                <!-- Lista de cerdos asociados al cliente -->
+                <h5>Cerdos Asociados</h5>
+                <ul id="cerdos-list" class="list-group">
+                    <!-- Aquí se llenará la lista de cerdos -->
+                </ul>
             </div>
         </div>
     </div>
