--- a/Granja/mi_app/templates/mi_app/Clientes/registrar.html
+++ b/Granja/mi_app/templates/mi_app/Clientes/registrar.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <form action="save" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         
         <label for="cedula">cedula: </label>
