Implementación listar porcinos

--- a/Granja/mi_app/templates/mi_app/base.html
+++ b/Granja/mi_app/templates/mi_app/base.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{% url 'porcinos' %}" class="sidebar-link">
                         <img src="{% static 'icons/cerdo.png' %}" alt="Icono" width="20" height="20">
                         <span>Porcinos</span>
                     </a>
