--- a/Granja/mi_app/templates/mi_app/base.html
+++ b/Granja/mi_app/templates/mi_app/base.html
@@ -31,7 +31,7 @@
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{% url 'index' %}" class="sidebar-link">
                         <i class="lni lni-user"></i>
                         <span>Clientes</span>
                     </a>
