--- a/Granja/mi_app/templates/mi_app/porcinos.html
+++ b/Granja/mi_app/templates/mi_app/porcinos.html
@@ -15,12 +15,13 @@
             <!-- Introduccion de la pagina -->
             <div class="col  ">
                 <h1 class="display-3">Porcinos</h1>
-                <p class="">En este apartado encontraras la información importante de tus clientes, como su ID,
-                    nombre, apellido,
-                    dirección, y demas información desde los botones en la sección de acciones.</p>
+                <p class="">En este apartado encontraras la información importante sobre los porcinos de tu granja, como
+                    su ID,
+                    peso, raza y
+                    Alimentación, demas información desde los botones en la sección de acciones.</p>
                 <button type="button" class="btn btn-success py-4 my-4" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">
-                    Regsitrar cliente
+                    Registrar porcino
                 </button>
             </div>
 
@@ -48,7 +49,7 @@
                                 d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
                         </svg>
                     </button>
-                    <span>Eliminar cliente</span>
+                    <span>Eliminar porcino</span>
                 </div>
 
                 <div>
@@ -59,7 +60,7 @@
                                 d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325" />
                         </svg>
                     </button>
-                    <span>Actualizar información del cliente </span>
+                    <span>Actualizar información del porcino </span>
                 </div>
 
                 <div>
@@ -154,7 +155,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="editarClienteLabel">Editar Información del Cliente</h5>
+                <h5 class="modal-title" id="editarClienteLabel">Editar Información del porcino</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -200,7 +201,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="infoModalLabel">Información del Cliente</h5>
+                <h5 class="modal-title" id="infoModalLabel">Información del porcino</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -228,7 +229,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="eliminarClienteLabel">Eliminar Cliente</h5>
+                <h5 class="modal-title" id="eliminarClienteLabel">Eliminar porcino</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -250,7 +251,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Agregar cliente</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Agregar porcino</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
